# swarm-final-project-ise

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  communicator.py  environment.yml  fastdds.xml  file_organizer.py  requirements.txt  swarm_mod.py  temp
.github/workflows/: latex.yml
communication/: communicator.py  flow.md  hosts.json
communication/mqtt/: mqtt_client.py  mqtt_server.py
communication/socket/: communicator.py  formation.py  teleop_publisher.py  test.py  translator.py
hardware/: dynamixel_class.py  dynamixel_inteface.py  dynamixel_main_working_AX_12.py
hardware/jeff_control-esp32c3/: Makefile  jeff_control.code-workspace
hardware/jeff_control-esp32c3/components/esp32-rotary-encoder/: CMakeLists.txt  rotary_encoder.c
hardware/jetson_setup/: eduroam-setup.sh  launch_joy_cmd_vel.md  run.md  setup_dynamixel.md  setup_ros_packages.md  setup_system.md
hardware/newmotor/: docs.md
locate-bots-cv/: aruco.py  aruco_client.py  aruco_server.py  aruco_visual.py  camera_calibration.yml  check_camera.py  check_fps.py  filter.py  main.py  requirements.txt  test.py  test_camera.py
locate-bots-cv/result/: 2025-04-08.csv  2025-04-09.csv  2025-04-11.csv  2025-04-22.csv  (+3 more)
report/: biblio.bib  report.tex
ros2_ws/: .bashrc  help.md
simulation/: README.md  object detection
simulation-probing/: README.md  TurtleBot3Burger_1_data.csv  TurtleBot3Burger_2_data.csv  TurtleBot3Burger_3_data.csv  combined_turtlebot_data.csv  main.py  pyproject.toml
test/: aruco.py  aruco_visual.py  calibration.py  generate_maker.py  test copy.py  test.py
(+280 files in other folders)
